--- a/config/config.less
+++ b/config/config.less
@@ -15,4 +15,17 @@
       }
     }
   }
+  .form-horizontal .control-label {
+    float: left;
+    font-weight: 700;
+  }
+  .form-group {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  .save {
+    position: absolute;
+    top: 10px;
+    right: 80px;
+  }
 }
